Reestructuración masiva del proyecto

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title> Prototipo de Página Web </title>
+		<title> Campaña de Financiación de Mare Stellarum </title>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 
 	<body>
 		<header>
-			<a href="#" class="logo"> Logo </a>
+			<a href="#subsection06"><img src="Pictures/Company Logo/01.png"/></a>
 			<nav></nav>
 			<ul>
 				<li><a href="#section01" class="active"> Campaña </a></li>
@@ -41,42 +41,46 @@
 
 		<main>
 			<section id="section01">
-				<h2> 1. Campaña </h2>
+				<h2> Campaña </h2>
 
-				<section class="subsection">
-					<h2> 1.1. Descripción del Juego </h2>
+				<section id="subsection01" class="subsection">
+					<h3> Descripción del Juego </h3>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor dolor ac tellus accumsan hendrerit. Cras quis tellus non leo varius aliquet ut nec lacus. Morbi porttitor ultrices tristique. Vestibulum euismod velit pellentesque urna pretium tincidunt ac in nibh. Cras fermentum nulla sit amet erat dignissim bibendum. Fusce et mollis urna. Ut eget metus a nulla interdum fermentum quis sed odio. Integer ornare, turpis et finibus dapibus, sem justo aliquam sem, at eleifend nibh ipsum ut lorem. Etiam volutpat auctor erat, sollicitudin mollis massa semper vitae. Aliquam quis sollicitudin enim, vel blandit sapien. Duis vehicula enim ligula, id convallis lorem tempor ac. Vivamus pellentesque eleifend mi, at pretium velit vulputate ut. Aenean turpis felis, venenatis nec mi in, facilisis rhoncus justo. Fusce ullamcorper at odio vitae scelerisque. Sed tincidunt tempus neque, eu rutrum diam tincidunt non. Pellentesque vehicula dignissim ante at venenatis.
-						<br/><br/>
-
-						Podéis haceros una idea de cómo será el videojuego con el siguiente video promocional:
+						Mare Stellarum es un videojuego de terror cósmico, en el que la libertad del jugador se ve reforzada a través de la exploración de un vasto mundo abierto y la toma de decisiones, desarrollado por la empresa Sleep No More. Podéis haceros una idea de cómo será el juego con el siguiente video promocional:
 						<div class="trailer">
-							<iframe title="Mare Stellarum Trailer" src="https://www.youtube.com/embed/-kYb_lQzwik" allowfullscreen></iframe>
+							<video controls>
+								<source src="Videos/01.mp4" type="video/mp4"/>
+								Tu navegador no soporta la etiqueta de vídeo.
+							</video>
 						</div>
 					</p>
 				</section>
 
-				<section class="subsection">
-					<h2> 1.2. Historia del Juego </h2>
+				<section id="subsection02" class="subsection">
+					<h3> Historia del Juego </h3>
 					<p>
 						Eres una arqueóloga espacial en un futuro muy lejano. Hace poco fuiste contactada por la Federación Intergaláctica para investigar una serie de extraños sucesos reportados a lo largo de todo el universo conocido durante los últimos 6 meses. Desde los rincones más profundos de las galaxias que conforman el universo conocido se han registrado multitud de casos de seres y objetos que desaparecen de repente, tan sólo para reaparecer al cabo de unas pocas semanas en un estado completamente irreconocible. No obstante, estas misteriosas desapariciones son únicamente el comienzo. En algunos planetas de la Federación Intergaláctica se han producido avistamientos de extrañas criaturas no catalogadas en ninguna de las enciclopedias de formas de vida espacial. Y lo más desconcertante de todo, es que con la llegada de estos seres desconocidos han aparecido numerosos monumentos de una cultura nunca antes vista. Tu trabajo es viajar a todos aquellos lugares en que se hayan dado casos de esta índole, y realizar un informe detallado sobre todo lo que puedas aprender de estos sucesos. Una vez finalizada la investigación, deberás formular una hipótesis que pueda explicar esta situación sin precedentes.
 					</p>
 				</section>
 
-				<section class="subsection">
-					<h2> 1.3. Jugabilidad del Juego </h2>
+				<section id="subsection03" class="subsection">
+					<h3> Jugabilidad del Juego </h3>
 					<p>
 						Lo que acabáis de leer es la premisa de nuestro próximo gran lanzamiento, el videojuego de terror cósmico Mare Stellarum. Basándonos en la mitología de H. P. Lovecraft, así como en numerosos clásicos de la ciencia ficción como la novela Solaris, de Stanislaw Lem, hemos ideado una experiencia de terror completamente novedosa para el mundo de los videojuegos, en la que el jugador no sólo tendrá que enfrentar numerosos horrores innombrables y escapar de ellos con vida, sino que además deberá tratar de comprenderlos y catalogarlos. El jugador podrá investigar los extraños sucesos que se han registrado a lo largo y ancho del universo conocido en cualquier orden y, además, dispondrá de una libertad casi total para recopilar toda aquella información que considere relevante, lo cual incluye información potencialmente errónea. Todo ello busca crear una experiencia extremadamente inmersiva para el jugador, que podrá observar cómo se abre ante él un vasto universo repleto de decisiones.  
 					</p>
 				</section>
 
-				<section class="subsection">
-					<h2> 1.4. Compendio de Criaturas </h2>
+				<section id="subsection04" class="subsection">
+					<h3> Compendio de Criaturas </h3>
+
+					<p>
+						A continuación, podéis observar algunas de las entradas del compendio de criaturas que podréis llegar a encontrar a lo largo de vuestra travesía interesterlar:
+					</p>
 
 					<article class="creatures inbetween">
-						<img src="Pictures/Mystic Creatures/02.png"/>
+						<img src="Pictures/Space Creatures/01.png"/>
 						<div>
-							<h3> Cryptomorphus Lethalis </h3>
+							<h3> X </h3>
 							<p>
 								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
 							</p>
@@ -84,9 +88,9 @@
 					</article>
 
 					<article class="creatures inbetween">
-						<img src="Pictures/Mystic Creatures/02.png"/>
+						<img src="Pictures/Space Creatures/02.png"/>
 						<div>
-							<h3> Cryptomorphus Lethalis </h3>
+							<h3> X </h3>
 							<p>
 								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
 							</p>
@@ -94,9 +98,9 @@
 					</article>
 
 					<article class="creatures inbetween">
-						<img src="Pictures/Mystic Creatures/02.png"/>
+						<img src="Pictures/Space Creatures/03.png"/>
 						<div>
-							<h3> Cryptomorphus Lethalis </h3>
+							<h3> X </h3>
 							<p>
 								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
 							</p>
@@ -104,7 +108,7 @@
 					</article>
 
 					<article class="creatures inbetween">
-						<img src="Pictures/Mystic Creatures/02.png"/>
+						<img src="Pictures/Space Creatures/04.png"/>
 						<div>
 							<h3> Cryptomorphus Lethalis </h3>
 							<p>
@@ -114,20 +118,43 @@
 					</article>
 
 					<article class="creatures">
-						<img src="Pictures/Mystic Creatures/02.png"/>
+						<img src="Pictures/Space Creatures/05.png"/>
 						<div>
-							<h3> Cryptomorphus Lethalis </h3>
+							<h3> X </h3>
 							<p>
 								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
 							</p>
 						</div>
 					</article>
 				</section>
+
+				<section id="subsection05" class="subsection">
+					<h3> Objetivos de la Campaña </h3>
+					<p>
+						Para poder sacar el proyecto adelante de la mejor manera posible, la campaña de financiación tiene que alcanzar una serie de objetivos económicos.
+						<br/><br/>
+						1.- 25.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						<br/><br/>
+						2.- 35.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						<br/><br/>
+						3.- 66.666€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						<br/><br/>
+						4.- 120.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						<br/><br/>
+						5.- 160.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+					</p>
+				</section>
+
+				<section id="subsection06" class="subsection">
+					<h3> Equipo de Desarrollo </h3>
+					<p>
+						El equipo de desarrollo de Sleep No More está compuesto de siete integrantes, cada uno especializado en un área concreta. No obstante, es relativamente frecuente que todos los miembros del equipo asistan a sus compañeros en áreas en las que no se especializan. A continuación, podéis conocer a todos los integrantes de nuestro equipo de desarrollo:
+				</section>
 			</section>
 
 
 			<section id="section02">
-				<h2> 2. Cuaderno de Bitácora </h2>
+				<h2> Cuaderno de Bitácora </h2>
 
 				<p>
 					Todavía no se ha añadido ninguna entrada al cuaderno de bitácora, pero revisa de vez en cuando esta sección para estar al día con cualquier posible actualización del proyecto Mare Stellarum.
@@ -136,13 +163,13 @@
 
 
 			<section id="section03">
-				<h2> 3. Preguntas Frecuentes </h2>
+				<h2> Preguntas Frecuentes </h2>
 
 				<article>
 	        		<details>
 	        			<summary> &nbsp 1. ¿Cuándo surgió la idea original del juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            			La idea original del juego surgió hace un año y medio, cuando a nuestro equipo de desarrollo se le ocurrió que podría ser una buena idea crear un videojuego de terror en el espacio tomando inspiración de H. P. Lovecraft.
 	            		</p>
 	        		</details>
 				</article>
@@ -151,7 +178,7 @@
 	        		<details>
 	        			<summary> &nbsp 2. ¿Cuánto tiempo ha estado en desarrollo el juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            			Durante los primeros seis meses estuvimos en fase de preproducción, barajando las bases fundamentales del diseño del juego, antes de dedicar un año entero a empezar a desarrollo.
 	            		</p>
 	        		</details>
 				</article>
@@ -160,7 +187,7 @@
 	        		<details>
 	        			<summary> &nbsp 3. ¿Cuál será la fecha de lanzamiento del juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            			Todavía no podemos decirlo con absoluta certeza, pero en caso de cumplirse todos los objetivos de nuestra camapaña de financiación creemos que podríamos lanzarlo en los próximos dos años.
 	            		</p>
 	        		</details>
 				</article>
@@ -169,7 +196,7 @@
 	        		<details>
 	        			<summary> &nbsp 4. ¿Qué plataformas serán compatibles con el juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            			En principio tenemos planeado lanzar el juego exclusivamente para ordenador y, más adelante, lanzarlo en las consolas de Nintendo y de Playstation.
 	            		</p>
 	        		</details>
 				</article>
@@ -177,36 +204,33 @@
 
 
 			<section id="section04">
-				<h2> 4. Comentarios </h2>
+				<h2> Comentarios </h2>
+				<div id="disqus_thread"></div>
+				<script>
+					var disqus_config = function () {
+		    			this.page.url = 'https://sleepnomorecompany.github.io/MareStellarum/';
+		    			this.page.identifier = '28458764';
+					};
+
+					(function() {
+		    			var d = document, s = d.createElement('script');
+
+		    			s.src = 'https://mare-stellarum.disqus.com/embed.js';
+
+		    			s.setAttribute('data-timestamp', +new Date());
+		    			(d.head || d.body).appendChild(s);
+					})();
+				</script>
+
+		        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+		        </noscript>
+
+		        <script id="dsq-count-scr" src="//mare-stellarum.disqus.com/count.js" async></script>
 			</section>
 		</main>
 
 
 		<button id="btn01"><span class="material-icons"> arrow_downward </span></button>
-
-
-		<div id="disqus_thread"></div>
-		<script>
-			var disqus_config = function () {
-    			this.page.url = 'https://sleepnomorecompany.github.io/MareStellarum/';
-    			this.page.identifier = '28458764';
-			};
-
-			(function() {
-    			var d = document, s = d.createElement('script');
-
-    			s.src = 'https://mare-stellarum.disqus.com/embed.js';
-
-    			s.setAttribute('data-timestamp', +new Date());
-    			(d.head || d.body).appendChild(s);
-			})();
-		</script>
-
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
-        <script id="dsq-count-scr" src="//mare-stellarum.disqus.com/count.js" async></script>
-
-
         <script src="script.js"></script>
 	</body>
 </html>
