Cambio de nombre de la carpeta

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<section id="section01">
 				<h2> Campaña </h2>
 
-				<section id="subsection01" class="subsection">
+				<section id="subsection01">
 					<h3> Descripción del Juego </h3>
 
 					<p>
@@ -58,21 +58,21 @@
 					</div>
 				</section>
 
-				<section id="subsection02" class="subsection">
+				<section id="subsection02">
 					<h3> Historia del Juego </h3>
 					<p>
 						Eres una arqueóloga espacial en un futuro muy lejano. Hace poco fuiste contactada por la Federación Intergaláctica para investigar una serie de extraños sucesos reportados a lo largo de todo el universo conocido durante los últimos 6 meses. Desde los rincones más profundos de las galaxias que conforman el universo conocido se han registrado multitud de casos de seres y objetos que desaparecen de repente, tan sólo para reaparecer al cabo de unas pocas semanas en un estado completamente irreconocible. No obstante, estas misteriosas desapariciones son únicamente el comienzo. En algunos planetas de la Federación Intergaláctica se han producido avistamientos de extrañas criaturas no catalogadas en ninguna de las enciclopedias de formas de vida espacial. Y lo más desconcertante de todo, es que con la llegada de estos seres desconocidos han aparecido numerosos monumentos de una cultura nunca antes vista. Tu trabajo es viajar a todos aquellos lugares en que se hayan dado casos de esta índole, y realizar un informe detallado sobre todo lo que puedas aprender de estos sucesos. Una vez finalizada la investigación, deberás formular una hipótesis que pueda explicar esta situación sin precedentes.
 					</p>
 				</section>
 				
-				<section id="subsection03" class="subsection">
+				<section id="subsection03">
 					<h3> Jugabilidad del Juego </h3>
 					<p>
 						Lo que acabáis de leer es la premisa de nuestro próximo gran lanzamiento, el videojuego de terror cósmico Mare Stellarum. Basándonos en la mitología de H. P. Lovecraft, así como en numerosos clásicos de la ciencia ficción como la novela Solaris, de Stanislaw Lem, hemos ideado una experiencia de terror completamente novedosa para el mundo de los videojuegos, en la que el jugador no sólo tendrá que enfrentar numerosos horrores innombrables y escapar de ellos con vida, sino que además deberá tratar de comprenderlos y catalogarlos. El jugador podrá investigar los extraños sucesos que se han registrado a lo largo y ancho del universo conocido en cualquier orden y, además, dispondrá de una libertad casi total para recopilar toda aquella información que considere relevante, lo cual incluye información potencialmente errónea. Todo ello busca crear una experiencia extremadamente inmersiva para el jugador, que podrá observar cómo se abre ante él un vasto universo repleto de decisiones.  
 					</p>
 				</section>
 
-				<section id="subsection04" class="subsection">
+				<section id="subsection04">
 					<h3> Compendio de Criaturas </h3>
 
 					<p>
@@ -130,7 +130,7 @@
 					</article>
 				</section>
 
-				<section id="subsection05" class="subsection">
+				<section id="subsection05">
 					<h3> Objetivos de la Campaña </h3>
 					<p>
 						Para poder sacar el proyecto adelante de la mejor manera posible, la campaña de financiación tiene que alcanzar una serie de objetivos económicos.
@@ -147,7 +147,7 @@
 					</p>
 				</section>
 
-				<section id="subsection06" class="subsection">
+				<section id="subsection06">
 					<h3> Equipo de Desarrollo </h3>
 					<p>
 						El equipo de desarrollo de Sleep No More está compuesto de siete integrantes, cada uno especializado en un área concreta. No obstante, es relativamente frecuente que todos los miembros del equipo asistan a sus compañeros en áreas en las que no se especializan. A continuación, podéis conocer a todos los integrantes de nuestro equipo de desarrollo:
@@ -207,7 +207,7 @@
 
 			<section id="section04">
 				<h2> Comentarios </h2>
-				
+
 				<div id="disqus_thread"></div>
 				<script>
 					var disqus_config = function () {
