Expansión del contenido

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-			<a href="#subsection06"><img src="Pictures/Company Logo/01.png"/></a>
+			<a href="#subsection07"><img src="Pictures/Company Logo/01.png"/></a>
 			<nav></nav>
 			<ul>
 				<li><a href="#section01" class="active"> Campaña </a></li>
@@ -31,7 +31,8 @@
 			<img src="Pictures/Background Parallax Effect/07.png" id="img07"/>
 			<img src="Pictures/Background Parallax Effect/08.png" id="img08"/>
 			<img src="Pictures/Background Parallax Effect/09.png" id="img09"/>
-			<h1> Mare Stellarum </h1>
+			<h1 id="txt01"> Mare Stellarum </h1>
+			<h2 id="txt02"> Descubre todos los Misterios del Universo </h2>
 			<img src="Pictures/Background Parallax Effect/10.png" id="img10"/>
 			<img src="Pictures/Background Parallax Effect/11.png" id="img11"/>
 			<img src="Pictures/Background Parallax Effect/12.png" id="img12"/>
@@ -82,9 +83,9 @@
 					<article class="creatures inbetween">
 						<img src="Pictures/Space Creatures/01.png"/>
 						<div>
-							<h3> X </h3>
+							<h3> Aeternitas Siderea </h3>
 							<p>
-								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+								Unas criaturas increíblemente abundantes en el espacio de un tiempo a esta parte. Su movimiento se asemeja al de las medusas, desplazándose mediante contracción y expansión. En cuanto a su apariencia, tienen una forma muy parecida al de una calabaza. Son de tamaño muy pequeño, de tan sólo unos diez centímetros. Son unas criaturas completamente inofensivas. Los exploradores espaciales las tienen en gran estima, ya que poseen cuerpos bioluminiscentes, los cuales ayudan a iluminar de manera natural la galaxia. Son criaturas que habitan en grandes comunidades, similares a los bancos de peces. Hasta la fecha, su forma de alimentación resulta todo un misterio para la comunidad científica, si bien se teoriza que podrían nutrirse de las emisiones de plasma solar. Su ciclo de vida también es desconocido, pero se especula que podrían ser inmortales.
 							</p>
 						</div>
 					</article>
@@ -92,9 +93,9 @@
 					<article class="creatures inbetween">
 						<img src="Pictures/Space Creatures/02.png"/>
 						<div>
-							<h3> X </h3>
+							<h3> Spinum Serpentiformis </h3>
 							<p>
-								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+								 Una criatura de cuerpo cilíndrico alargado, de entre dos y tres metros de largo. Su movimiento es sinusoidal, al igual que otros seres carentes de extremidades, como por ejemplo las serpientes. Es una criatura terrestre, cuya escasa inteligencia apenas le permite seguir sus instintos básicos. Extremadamente común en los planetas del sistema solar de Albarstos. De reproducción ovípara, depositan en sus huevos en profundos túneles bajo tierra. Hoy en día, sus huevos se han convertido en uno de los recursos más valiosos del universo, ya que la cáscara está compuesta por uno de los materiales más duros conocidos. Los especímenes logran salir del cascarón gracias a los afilados pinchos que recorren todo su cuerpo, y que pueden emplear como defensa. Los embriones se dedican a rondar de manera instintiva dentro del huevo durante las últimas etapas del desarrollo y, gracias a que el interior del huevo es de un material mucho más blando, logran salir después de unos pocos meses. De cualquier otra forma, la ruptura de los cascarones sería prácticamente imposible.
 							</p>
 						</div>
 					</article>
@@ -102,9 +103,9 @@
 					<article class="creatures inbetween">
 						<img src="Pictures/Space Creatures/03.png"/>
 						<div>
-							<h3> X </h3>
+							<h3> Chimaerae Pyroformis </h3>
 							<p>
-								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+								Una criatura multidimensional, cuya verdadera forma es demasiado compleja para entrar a nuestro universo y que, al tratar de acceder al mismo, genera un avatar de aspecto monstruoso, muy parecido a una quimera. Este avatar es una bestia con nula capacidad de raciocinio, una mera proyección de la verdadera criatura reducida a sus instintos más básicos. Cuando este avatar entra en un estado alterado grave, como por ejemplo agitación o confusión, su cuerpo entero se consume en llamas y adopta una nueva forma monstruosa. Puede realizar esta transformación múltiples veces, pero se sabe que tiene un límite, aunque no se conoce lo que determina dicho límite. Una vez alcanzado, tratará de iniciar una nueva regeneración, y su cuerpo una vez más se bañará en llamas. Sin embargo, el proceso se interrumpirá a medias, eliminando para siempre al avatar de la criatura.
 							</p>
 						</div>
 					</article>
@@ -122,9 +123,9 @@
 					<article class="creatures">
 						<img src="Pictures/Space Creatures/05.png"/>
 						<div>
-							<h3> X </h3>
+							<h3> Sonichillium Communis </h3>
 							<p>
-								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+								Unas criaturas de gran tamaño, que parecen actuar siempre de manera conjunta, lo que ha llevado a la comunidad científica a teorizar que poseen una mente colmena. En lo referente a su apariencia, tienen cuerpos alargados de forma tubular. En un extremo, se encuentra su boca y en el extremo contrario se encuentra su cola. Destacan por su falta de ojos, así como por su sistema de comunicación a través de ondas de sonido en forma de chillidos. En cuanto a su alimentación, se ha descubierto que pueden cazar empleando versiones armonizadas de dichos chillidos, los cuales producen distintos cambios de estado en sus presas, tales como confusión, agotamiento, mareo e, incluso, profundas alucinaciones. Cuanto más atronador es el sonido de sus chillidos, mayor será la alteración del estado de la presa. Pueden reproducirse muy rápidamente, pero su esperanza de vida es muy corta, lo cual es un alivio ya que si se llegara a reunir una alta concentración de individuos, serían capaces de llevar al borde de la extinción a los depredadores más letales.
 							</p>
 						</div>
 					</article>
@@ -133,21 +134,34 @@
 				<section id="subsection05">
 					<h3> Objetivos de la Campaña </h3>
 					<p>
-						Para poder sacar el proyecto adelante de la mejor manera posible, la campaña de financiación tiene que alcanzar una serie de objetivos económicos.
+						Para poder sacar el proyecto adelante en su mejor estado posible, la campaña de financiación tiene que alcanzar una serie de objetivos económicos. A continuación, podéis observar los distintos objetivos de la campaña:
 						<br/><br/>
-						1.- 25.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						1.- 25.000€: En caso de alcanzar este objetivo, el desarrollo dispondrá de los recursos económicos necesarios para poder llevarse a cabo, y el lanzamiento del juego quedará completamente garantizado.
 						<br/><br/>
-						2.- 35.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						2.- 35.000€: En caso de alcanzar este objetivo, se incluirá dentro del juego un sistema de logros enlazados con determinadas rutas, así como diferentes atuendos desbloqueables para la protagonista.
 						<br/><br/>
-						3.- 66.666€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						3.- 66.666€: En caso de alcanzar este objetivo, se añadirá al juego un modo de dificultad adicional para los aficionados del terror más extremo, así como una librería de sonidos encargada a un estudio profesional.
 						<br/><br/>
-						4.- 120.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						4.- 120.000€: En caso de alcanzar este objetivo, se lanzará el juego en las consolas de Nintendo y de Playstation, y se realizarán localizaciones a más idiomas como pueden ser el ruso o el chino.
 						<br/><br/>
-						5.- 160.000€: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia commodo tortor id cursus. Etiam quis scelerisque sapien. Mauris gravida efficitur libero, non luctus sapien auctor quis.
+						5.- 160.000€: En caso de alcanzar este objetivo, se adaptará todo el juego para poder ser disfrutado con gafas de realidad virtual, lo que hará la experiencia mucho más terrorífica.
 					</p>
 				</section>
 
 				<section id="subsection06">
+					<h3> Contribuciones de la Campaña </h3>
+					<p>
+						Para poder apoyar el proyecto y que salga adelante, tenemos tres formas diferentes de contribuir a la campaña de financiación, cada una de ellas con sus propias recompensas. A continuación, podéis observar los distintos niveles de contribución de la campaña:
+						<br/><br/>
+						1.- El Humilde, por 3€: Por esta contribución, recibirás como recompensa noticias exclusivas del desarrollo del videojuego y tu nombre figurará en los créditos como mecenas del proyecto.
+						<br/><br/>
+						2.- Astro-Rodeo, por 15€: Por esta contribución, recibirás como recompensa una copia digital del juego a su salida, un icono de perfil exclusivo para nuestro servidor de Discord, y todas las recompensas del nivel anterior.
+						<br/><br/>
+						3.- Criatura, por 50€: Por esta contribución, recibirás como recompensa una ilustración a mano de tu criatura favorita firmada por las artistas del proyecto, un póster exclusivo del juego, y todas las recompensas del nivel anterior.
+					</p>
+				</section>
+
+				<section id="subsection07">
 					<h3> Equipo de Desarrollo </h3>
 					<p>
 						El equipo de desarrollo de Sleep No More está compuesto de siete integrantes, cada uno especializado en un área concreta. No obstante, es relativamente frecuente que todos los miembros del equipo asistan a sus compañeros en áreas en las que no se especializan. A continuación, podéis conocer a todos los integrantes de nuestro equipo de desarrollo:
