Nueva expansión de contenido

--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
 
 		        <script id="dsq-count-scr" src="//mare-stellarum.disqus.com/count.js" async></script>
 			</section>
+
+			<section id="section05">
+				<p>
+					<b>ATENCIÓN:</b> Esta página simula la campaña de microfinanciación de un videojuego ficticio
+					y no representa un producto real. Práctica de Multimedia, 1º GDDV - Curso 23/24
+					Madrid, URJC. La URJC no se hace responsable del contenido expuesto por el autor.
+					<br/><br/>
+				</p>
+			</section>
 		</main>
 
 
