Otra nueva expansión de contenido

--- a/index.html
+++ b/index.html
@@ -51,11 +51,22 @@
 						Mare Stellarum es un videojuego de terror cósmico, en el que la libertad del jugador se ve reforzada a través de la exploración de un vasto mundo abierto y la toma de decisiones, desarrollado por la empresa Sleep No More. Podéis haceros una idea de cómo será el juego con el siguiente video promocional:
 					</p>
 
-					<div class="trailer">
+					<div class="multimedia">
 						<video controls>
 							<source src="Videos/01.mp4" type="video/mp4"/>
 							Tu navegador no soporta la etiqueta de vídeo.
 						</video>
+					</div>
+
+					<p>
+						También podéis haceros una idea de cómo será la banda sonora del juego con la siguiente canción:
+					</p>
+
+					<div class="multimedia">
+						<audio controls>
+						 	<source src="Music/01.wav" type="audio/wav">
+							Tu navegador no soporta la etiqueta de vídeo.
+						</audio>
 					</div>
 				</section>
 
