Penúltima expansión de contenido

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="multimedia">
 						<audio controls>
 						 	<source src="Music/01.wav" type="audio/wav">
-							Tu navegador no soporta la etiqueta de vídeo.
+							Tu navegador no soporta la etiqueta de audio.
 						</audio>
 					</div>
 				</section>
@@ -177,6 +177,43 @@
 					<p>
 						El equipo de desarrollo de Sleep No More está compuesto de siete integrantes, cada uno especializado en un área concreta. No obstante, es relativamente frecuente que todos los miembros del equipo asistan a sus compañeros en áreas en las que no se especializan. A continuación, podéis conocer a todos los integrantes de nuestro equipo de desarrollo:
 					</p>
+
+					<div class="team">
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Mónica Alaine </p>
+				        </div>
+
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Alexia Fernández </p>
+				        </div>
+
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Ayoze González </p>
+				        </div>
+
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Hugo García </p>
+				        </div>
+
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Axlin Luengo </p>
+				        </div>
+
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Sara Pedrero </p>
+				        </div>
+
+				        <div class="member">
+				            <img src="Pictures/Company Logo/01.png">
+				            <p> Henar San Román </p>
+				        </div>
+				    </div>
 				</section>
 			</section>
 
